# BeatForge2

./: README.md  index.html  package-lock.json  package.json
src/: index.css  main.tsx  themes.json  themes.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord.rs  lib.rs  main.rs
src/components/: BPMModal.tsx  Button.tsx  ContextMenu.tsx  Modal.tsx  PlayerControls.tsx  Sidebar.tsx  TitleBar.tsx  Toggle.tsx
src/components/Queue/: QueueView.tsx
src/components/Settings/: AppearanceSection.tsx  BeatFoldersSection.tsx  ClearIndexModal.tsx  DeleteFoldersModal.tsx  DiscordRPCSection.tsx  ThemeModal.tsx  index.ts
src/contexts/: AudioCacheContext.tsx  BeatsContext.tsx  DiscordRPCContext.tsx  FolderContext.tsx  QueueContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/pages/: AlbumDetail.tsx  AlbumLibrary.tsx  App.tsx  Library.tsx  Settings.tsx
src/services/: beatLoader.ts
src/types/: Album.ts  Beat.ts  Theme.ts  Track.ts
src/utils/: beatUtils.ts
