[package]
name = "BeatForge"
version = "0.4.3"
description = "The Library for Producers"
authors = ["prodbyeagle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beatforgelib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.0.0-beta.0"
notify = "7.0.0"
walkdir = "2.4.0"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
discord-rich-presence = "0.2.3"
lazy_static = "1.4.0"
tokio = { version = "1.28", features = ["full"] }
